--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,28 +26,32 @@ requirements:
     - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
-    - r-r6
+    - r-r6 >=2.5.0
     - r-attempt >=0.3.1
-    - r-cli
-    - r-desc
-    - r-fs
-    - r-glue
-    - r-jsonlite
-    - r-pkgbuild
-    - r-remotes
-    - r-usethis
+    - r-cli >=2.3.0
+    - r-desc >=1.2.0
+    - r-fs >=1.5.0
+    - r-glue >=1.4.2
+    - r-jsonlite >=1.7.2
+    - r-pak >=0.2.0
+    - r-pkgbuild >=1.2.0
+    - r-remotes >=2.2.0
+    - r-renv >=0.12.0
+    - r-usethis >=2.0.1
   run:
     - r-base
-    - r-r6
+    - r-r6 >=2.5.0
     - r-attempt >=0.3.1
-    - r-cli
-    - r-desc
-    - r-fs
-    - r-glue
-    - r-jsonlite
-    - r-pkgbuild
-    - r-remotes
-    - r-usethis
+    - r-cli >=2.3.0
+    - r-desc >=1.2.0
+    - r-fs >=1.5.0
+    - r-glue >=1.4.2
+    - r-jsonlite >=1.7.2
+    - r-pak >=0.2.0
+    - r-pkgbuild >=1.2.0
+    - r-remotes >=2.2.0
+    - r-renv >=0.12.0
+    - r-usethis >=2.0.1
 
 test:
   commands:
