--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,10 +33,10 @@ requirements:
     - r-fs >=1.5.0
     - r-glue >=1.4.2
     - r-jsonlite >=1.7.2
+    - r-memoise
     - r-pak >=0.2.0
     - r-pkgbuild >=1.2.0
     - r-remotes >=2.2.0
-    - r-renv >=0.12.0
     - r-usethis >=2.0.1
   run:
     - r-base
@@ -47,10 +47,10 @@ requirements:
     - r-fs >=1.5.0
     - r-glue >=1.4.2
     - r-jsonlite >=1.7.2
+    - r-memoise
     - r-pak >=0.2.0
     - r-pkgbuild >=1.2.0
     - r-remotes >=2.2.0
-    - r-renv >=0.12.0
     - r-usethis >=2.0.1
 
 test:
@@ -59,7 +59,7 @@ test:
     - "\"%R%\" -e \"library('dockerfiler')\""  # [win]
 
 about:
-  home: https://github.com/ColinFay/dockerfiler
+  home: https://github.com/ThinkR-open/dockerfiler
   license: MIT
   summary: Build a Dockerfile straight from your R session. 'dockerfiler' allows you to create step by step a Dockerfile, and provide convenient tools to wrap R code inside this Dockerfile.
   license_family: MIT
@@ -70,24 +70,3 @@ about:
 extra:
   recipe-maintainers:
     - conda-forge/r
-
-# Package: dockerfiler
-# Title: Easy Dockerfile Creation from R
-# Version: 0.1.3
-# Authors@R: person('Colin', 'Fay', email = 'contact@colinfay.me', role = c('cre', 'aut'))
-# Description: Build a Dockerfile straight from your R session. 'dockerfiler' allows you to create step by step a Dockerfile, and provide convenient tools to wrap R code inside this Dockerfile.
-# License: MIT + file LICENSE
-# URL: https://github.com/ColinFay/dockerfiler
-# BugReports: https://github.com/ColinFay/dockerfiler/issues
-# Imports: attempt, glue, R6, utils
-# Suggests: covr, testthat, knitr, rmarkdown
-# Encoding: UTF-8
-# LazyData: true
-# RoxygenNote: 6.1.0
-# VignetteBuilder: knitr
-# NeedsCompilation: no
-# Packaged: 2019-03-19 15:32:05 UTC; colin
-# Author: Colin Fay [cre, aut]
-# Maintainer: Colin Fay <contact@colinfay.me>
-# Repository: CRAN
-# Date/Publication: 2019-03-19 16:10:03 UTC
